Inscription par numéro de téléphone suivant le code du pays